// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveDetails matches loading, pending, and confirmed snapshots: confirmed 1`] = `
<View
  layout={BaseAnimationMock {}}
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <View
    automaticallyAdjustKeyboardInsets={true}
    automaticallyAdjustsScrollIndicatorInsets={true}
    centerContent={true}
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardShouldPersistTaps="always"
    onLayout={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
      }
    }
    testID="ReceiveDetailsScrollView"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text>
        Success
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontWeight": "600",
              "paddingBottom": 12,
              "textAlign": "center",
            },
            {
              "color": "#111111",
            },
          ]
        }
      >
        50 / 50
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 16,
          "paddingHorizontal": 32,
          "width": "100%",
        }
      }
    >
      <View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            Share
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ReceiveDetails matches loading, pending, and confirmed snapshots: loading 1`] = `
<View
  layout={BaseAnimationMock {}}
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <View
    automaticallyAdjustKeyboardInsets={true}
    automaticallyAdjustsScrollIndicatorInsets={true}
    centerContent={true}
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardShouldPersistTaps="always"
    onLayout={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
      }
    }
    testID="ReceiveDetailsScrollView"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingVertical": 40,
        }
      }
    >
      <Text>
        Loading
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 16,
          "paddingHorizontal": 32,
          "width": "100%",
        }
      }
    >
      <View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            Share
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ReceiveDetails matches loading, pending, and confirmed snapshots: pending 1`] = `
<View
  layout={BaseAnimationMock {}}
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <View
    automaticallyAdjustKeyboardInsets={true}
    automaticallyAdjustsScrollIndicatorInsets={true}
    centerContent={true}
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "space-between",
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardShouldPersistTaps="always"
    onLayout={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
      }
    }
    testID="ReceiveDetailsScrollView"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text>
        Pending icon
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontWeight": "600",
              "paddingBottom": 12,
              "textAlign": "center",
            },
            {
              "color": "#111111",
            },
          ]
        }
      >
        50 / 50
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontWeight": "600",
              "paddingBottom": 12,
              "textAlign": "center",
            },
            {
              "color": "#111111",
            },
          ]
        }
      >
        10 minutes
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 16,
          "paddingHorizontal": 32,
          "width": "100%",
        }
      }
    >
      <View>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            Share
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
